<resources>
    <string name="app_name">KelineYT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kleine">Kleine</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="g_best_quality">It is now very easy to reach the \n best quality among all the \n products on the internet!</string>
    <string name="g_the_right_address">The Right Address \n For Shopping \n Anyday</string>
    <string name="ornament_left">Ornament Left</string>
    <string name="ornament_ellipse">Ornament Ellipse</string>
    <string name="start">Start</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="g_first_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="g_let_s_register">Let\'s Register</string>
    <string name="g_do_you_have_an_account_log_in">Do You Have an Account? Login</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
</resources>