<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.loginregister.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="110dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toTopOf="parent"

            android:text="@string/kleine"/>

        <TextView
            android:id="@+id/tvLetsLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            android:text="@string/let_s_login"
            android:textAlignment="center"
            android:gravity="center"/>


        <TextView
            android:id="@+id/tvDonthaveAccount"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_register"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/tvLetsLogin"
            app:layout_constraintTop_toBottomOf="@+id/tvLetsLogin" />

        <EditText
            android:id="@+id/edEmailLogin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/tvDonthaveAccount"
            style="@style/editText"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/edPasswordLogin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/edEmailLogin"
            style="@style/editText"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/tvFogotPasswordLogin"
            style="@style/h2"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@+id/edPasswordLogin" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonLoginLogin"
            style="@style/blueButtonStyle"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:text="@string/login"
            app:spinning_bar_color="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/tvFogotPasswordLogin"/>

        <ImageView
            android:id="@+id/facebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLoginLeft"
            app:layout_constraintTop_toBottomOf="@id/buttonLoginLogin"
            android:src="@drawable/facebook_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            app:layout_constraintStart_toStartOf="@id/facebookLogin"
            app:layout_constraintEnd_toEndOf="@id/facebookLogin"
            app:layout_constraintTop_toTopOf="@id/facebookLogin"
            app:layout_constraintBottom_toBottomOf="@id/facebookLogin"/>

        <ImageView
            android:id="@+id/googleLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineLoginRight"
            app:layout_constraintTop_toBottomOf="@id/buttonLoginLogin"
            android:src="@drawable/google_login"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            app:layout_constraintStart_toStartOf="@id/googleLogin"
            app:layout_constraintEnd_toEndOf="@id/googleLogin"
            app:layout_constraintTop_toTopOf="@id/googleLogin"
            app:layout_constraintBottom_toBottomOf="@id/googleLogin"/>





        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.91" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>