<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.loginregister.AccountOptionsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="120dp"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/kleine"
            app:drawableStartCompat="@drawable/ic_kleine_shape" />

        <TextView
            android:id="@+id/tvLetsLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h4"
            android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/g_the_right_address"
            android:textAlignment="center"
            android:gravity="center"/>


        <TextView
            android:id="@+id/tvDonthaveAccount"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_best_quality"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@+id/tvLetsLogin"
            app:layout_constraintStart_toStartOf="@+id/tvLetsLogin"
            app:layout_constraintTop_toBottomOf="@+id/tvLetsLogin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonRegisterAccountOptions"

            style="@style/blueButtonStyle"
            app:backgroundTint="@color/g_blue"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvDonthaveAccount"
            app:layout_constraintStart_toStartOf="@id/tvDonthaveAccount"
            app:layout_constraintTop_toBottomOf="@id/tvDonthaveAccount" />

        <Button
            android:id="@+id/buttonLoginAccountOptions"
            style="@style/whiteButtonStyle"
            app:backgroundTint="@color/g_white"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:text="@string/login"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/tvDonthaveAccount"
            app:layout_constraintStart_toStartOf="@id/tvDonthaveAccount"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccountOptions" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>