<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".fragments.loginregister.RegisterFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:drawablePadding="@dimen/_5sdp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/kleine"
            android:textColor="@color/g_black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            app:layout_constraintBottom_toTopOf="@id/guideline7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_lets_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_thin"
            android:gravity="center"
            android:text="@string/g_let_s_register"
            android:textColor="@color/g_black"
            android:textSize="@dimen/_27sdp"
            app:layout_constraintEnd_toEndOf="@id/tv_app_name"
            app:layout_constraintStart_toStartOf="@id/tv_app_name"
            app:layout_constraintTop_toBottomOf="@id/guideline8" />

        <TextView
            android:id="@+id/tv_dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="@string/g_do_you_have_an_account_log_in"
            android:textColor="@color/g_gray500"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tv_lets_login"
            app:layout_constraintStart_toStartOf="@id/tv_lets_login"
            app:layout_constraintTop_toBottomOf="@id/tv_lets_login" />

        <EditText
            android:id="@+id/ed_first_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/g_first_name"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/tv_dont_have_an_account" />

        <EditText
            android:id="@+id/ed_last_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/Last_name"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/ed_first_name" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/e_mail"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/ed_last_name" />


        <EditText
            android:id="@+id/ed_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="12dp"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:hint="@string/password"
            android:password="true"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/ed_email" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/blue_background"
            android:fontFamily="@font/poppins_light"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/ed_last_name"
            app:layout_constraintStart_toStartOf="@id/ed_last_name"
            app:layout_constraintTop_toBottomOf="@id/ed_password" />


        <ImageView
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/facebook_login"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            app:layout_constraintBottom_toBottomOf="@id/btn_facebook"
            app:layout_constraintEnd_toEndOf="@id/btn_facebook"
            app:layout_constraintStart_toStartOf="@id/btn_facebook"
            app:layout_constraintTop_toTopOf="@id/btn_facebook" />

        <ImageView
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/google_login"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            app:layout_constraintBottom_toBottomOf="@id/btn_google"
            app:layout_constraintEnd_toEndOf="@id/btn_google"
            app:layout_constraintStart_toStartOf="@id/btn_google"
            app:layout_constraintTop_toTopOf="@id/btn_google" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.09" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.89" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />
    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>