<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragments.loginregister.IntroductionFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/ornament_left"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@id/guidelinelefttexture"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/ornament_ellipse"
        android:src="@drawable/ellips"
        app:layout_constraintBottom_toBottomOf="@id/guidelineEllipseBottom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop" />

    <TextView
        android:id="@+id/tvLetsLogin"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_115sdp"
        android:gravity="center"
        android:text="@string/g_the_right_address"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/ellipse"
        app:layout_constraintEnd_toEndOf="@id/ellipse"
        app:layout_constraintStart_toStartOf="@id/ellipse"
        app:layout_constraintTop_toTopOf="@id/guidelinelefttexture" />


    <TextView
        android:id="@+id/tvDonthaveAccount"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/g_best_quality"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tvLetsLogin"
        app:layout_constraintStart_toStartOf="@+id/tvLetsLogin"
        app:layout_constraintTop_toBottomOf="@+id/tvLetsLogin" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/texture_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelinelefttexture" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinelefttexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="147dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <Button
        android:id="@+id/buttonStart"
        style="@style/blueButtonStyle"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:text="@string/start"
        app:backgroundTint="@color/g_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvDonthaveAccount"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/tvDonthaveAccount"
        app:layout_constraintTop_toBottomOf="@id/tvDonthaveAccount"
        app:layout_constraintVertical_bias="0.49" />

</androidx.constraintlayout.widget.ConstraintLayout>